# antsibull

./: .flake8  .git-blame-ignore-revs  .gitignore  .mypy.ini  .pylintrc.automated  .pyre_configuration  CHANGELOG-FORMAT.md  CHANGELOG.md  CHANGELOG.rst  CHANGELOG.rst.license  README.md  antsibull.cfg  codecov.yml  lint-flake8.sh  lint-mypy.sh  lint-pylint.sh  lint-pyre.sh  lint-requirements.txt  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  requirements.yml  set-version-number.sh  setup.py  test-pytest.sh  test-requirements.txt  test.sh
.github/workflows/: antsibull-build.yml  antsibull-docs.yml  antsibull-lint-tests.yml  antsibull-lint.yml  build-css.yml  build-dumb-pypi.yml  build-simple-docsite.yml  codeql.yml  nox.yml  pythonlinters.yml  pythontests.yml  reuse.yml  validate-html.py
.reuse/: dep5
ansible_infra/: build_collection.py  new_acd.py
ansible_infra/data/: acd-setup_py.j2
ansibulled/: build_acd_commands.py  build_collection.py  dependency_files.py  galaxy.py
ansibulled/changelog/: __init__.py  ansible.py  changelog_generator.py  changes.py  config.py  fragment.py  lint.py  logger.py  plugins.py  rst.py  utils.py
ansibulled/cli/: ansibulled.py  ansibulled_changelog.py  ansibulled_lint_changelog_yaml.py  build_ansible.py
ansibulled/schemas/: ansible_doc.py  base.py  callback.py  callback_docs.py  docs.py  module.py  module_docs.py  plugin.py  plugin_docs.py
antsibull/: ansible_base.py  app_context.py  app_logging.py  args.py  augment_docs.py  build_acd_commands.py  build_ansible_commands.py  build_changelog.py  build_collection.py  changelog.py  collections.py  compat.py  config.py  constants.py  dependency_files.py  extra_docs.py  filesystem.py  galaxy.py  hashing.py  lint_extra_docs.py  logging.py  new_acd.py  new_ansible.py  tarball.py  venv.py  write_docs.py  yaml.py
antsibull-stub/: README.md  pyproject.toml
antsibull/changelog/: __init__.py  ansible.py  changelog_generator.py  changes.py  errors.py  lint.py  rst.py
antsibull/cli/: antsibull_build.py  antsibull_changelog.py  antsibull_docs.py  antsibull_lint.py  antsibulled_lint_changelog_yaml.py  dep-closure.py  redirects.py
antsibull/data/: acd-readme.rst  acd-readme.txt  acd-setup_py.j2  ansible-setup_py.j2  build-ansible.sh.j2  collection-enum.py  collection-readme.j2  galaxy_yml.j2
antsibull/docs_parsing/: __init__.py  ansible_doc.py  ansible_internal.py  fqcn.py  parsing.py  plugindump.py  routing.py
antsibull/jinja2/: environment.py  filters.py  tests.py
antsibull/schemas/: ansible_doc.py  base.py  callback.py  config.py  context.py  docs.py  module.py  plugin.py
antsibull/utils/: collections.py  get_pkg_data.py  http.py  transformations.py
build_acd/: README.rst  build-acd.py  requirements.txt  test.sh
build_acd/ansible_infra/: build_acd_commands.py  cli.py  dependency_files.py  galaxy.py
build_acd/tests/: aiohttp_utils.py  certificate_utils.py  test_galaxy.py  test_parse_pieces.py
changelogs/: changelog.yaml  config.yaml
changelogs/fragments/: 0.40.0.yml  0.42.0.yml  0.42.0b1.yml  0.44.0.yml  0.45.0.yml  0.46.0.yml  0.47.0.yml  0.48.0.yml  0.49.0.yml  0.51.0.yml  0.51.2.yml  0.52.0.yml  0.54.0.yml  0.55.0.yml  0.56.0.yml  0.56.1.yml  0.57.0.yml  0.57.1.yml  0.58.0.yml  0.59.0.yml  0.59.1.yml  0.60.0.yml  0.63.0.yml  0.65.0.yml  0.66.0.yml  0.67.0.yml  122-antsibull-core-sh.yml  281-semantic-markup.yml  329-keywords.yml  342-setup.py-ignore.yml  355-extra-links.yml  364-plugin-type.yml  379-collection-enum-fix.yml  382-sphinx-init-squash-hierarchy.yml  383-antsibull-docs-collections.yml  384-help.yml  386-fix-html.yml  388-table-html-alias.yml  389-remove-email-addresses.yml  391-sphinx-init-ansible-docs-fallback.yml  (+113 more)
docs/: build-ansible.rst  changelog.yaml-format.md  changelogs.rst  schemas.rst
playbooks/: build-single-release.yaml  nested-ansible-tests.yaml
playbooks/action_plugins/: parse_ansible_runtime.py
roles/build-release/: README.md
sphinx-extension/: .mypy.ini  README.md  lint-flake8.sh  lint-mypy.sh  lint-pylint.sh  lint-pyre.sh  pyproject.toml  test-pytest.sh
sphinx-extension/sphinx_antsibull_ext/: __init__.py
sphinx_antsibull_ext/: __init__.py  antsibull-minimal.css  assets.py  directives.py  pygments_lexer.py  roles.py
sphinx_antsibull_ext/css/: antsibull-minimal.scss  browserslistrc  build.sh
src/antsibull/: __init__.py  announcements.py  ansible_base.py  ansible_core.py  app_context.py  augment_docs.py  build_ansible_commands.py  build_changelog.py  build_collection.py  changelog.py  collection_links.py  collection_meta.py  collection_meta_lint.py  collections.py  compat.py  constants.py  dep_closure.py  dependency_files.py  extra_docs.py  filesystem.py  galaxy.py  hashing.py  lint_extra_docs.py  logging.py  new_ansible.py  pypi.py  python_metadata.py  sanity_tests.py  semantic_helper.py  tagging.py  tarball.py  types.py  venv.py  versions.py  write_docs.py  yaml.py
src/antsibull_build/: __init__.py  announcements.py  build_ansible_commands.py  build_data_lint.py  changelog.py  dep_closure.py  pypi.py  python_metadata.py  sanity_tests.py  tagging.py  types.py  versions.py
src/sphinx_antsibull_ext/: __init__.py  antsibull-minimal.css  assets.py  roles.py
stubs/: argcomplete.pyi  argparse.pyi  rstcheck.pyi
stubs/ansible/: __init__.pyi  constants.pyi  release.pyi
stubs/jinja2/: utils.pyi
stubs/twiggy/: __init__.pyi  formats.pyi  levels.pyi
tests/: conftest.py  download_ansible_sdist.sh  test_announcements.py  test_changelog.py  test_dummy.py  test_galaxy.py  test_parse_pieces.py  test_paths.py  test_tagging.py  test_types.py  test_utils.py  test_versions.py  verify_package_files.py  verify_package_files.sh
tests/functional/: certificate_utils.py  test_dependency_files.py  test_docs_linting.py  test_logging.py
tests/sphinx/: test_lexer.py
tests/test_data/: ansible-7.0.0.deps  ansible-7.0.0b1.deps  ansible-7.4.0-tags.yaml  ansible-7.4.0.deps  (+2 more)
tests/test_data/package-files/7.5.0/: README.rst  build-ansible.sh  setup.cfg  setup.py
tests/test_data/package-files/7.5.0/dist-files/: ansible-7.5.0-py3-none-any.whl
(+219 files in other folders)
