[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "sphinx-antsibull-ext"
version = "0.32.0"
description = "Tools for building the Ansible Distribution"
authors = ["Felix Fontein <felix@fontein.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/ansible-community/antsibull"
packages = [
    { include = "sphinx_antsibull_ext" },
    { include = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.6.0"
pygments = ">= 2.6.1"
sphinx = "*"

[tool.poetry.dev-dependencies]
codecov = "*"
flake8 = ">= 3.8.0"
mypy = "*"
# https://github.com/facebook/pyre-check/issues/398
pyre-check = "^0.0.46"
pylint = "*"
pytest = "*"
pytest-cov = "*"

[tool.isort]
line_length = 100
multi_line_output = 0
balanced_wrapping = true
