[metadata]
name = ansible
description = Radically simple IT automation
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Ansible, Inc.
author_email = info@ansible.com
url = https://ansible.com/
project_urls = 
	Bug Tracker = https://github.com/ansible/ansible/issues
	Code of Conduct = https://docs.ansible.com/ansible/latest/community/code_of_conduct.html
	Documentation = https://docs.ansible.com/ansible
	Mailing lists = https://docs.ansible.com/ansible/latest/community/communication.html#mailing-list-information
	Source Code = https://github.com/ansible/ansible
license = GPL-3.0-or-later
classifiers = 
	  Development Status :: 5 - Production/Stable
	  Environment :: Console
	  Framework :: Ansible
	  Intended Audience :: Developers
	  Intended Audience :: Information Technology
	  Intended Audience :: System Administrators
	  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	  Natural Language :: English
	  Operating System :: POSIX
	  Programming Language :: Python :: 3
	  Programming Language :: Python :: 3.9
	  Programming Language :: Python :: 3.10
	  Programming Language :: Python :: 3.11
	  Programming Language :: Python :: 3 :: Only
version = 7.5.0

[options]
zip_safe = False
install_requires = 
	  ansible-core ~= 2.14.5
requires_python = >=3.9
packages = 
	  ansible_collections
include_package_data = True

[options.entry_points]
console_scripts = 
	ansible-community = ansible_collections.ansible_community:main

[options.exclude_package_data]
ansible_collections = 
	  amazon/aws/docs/*
	  amazon/aws/tests/*
	  amazon/aws/.*
	  ansible/netcommon/docs/*
	  ansible/netcommon/tests/*
	  ansible/netcommon/.*
	  ansible/posix/docs/*
	  ansible/posix/tests/*
	  ansible/posix/.*
	  ansible/utils/docs/*
	  ansible/utils/tests/*
	  ansible/utils/.*
	  ansible/windows/docs/*
	  ansible/windows/tests/*
	  ansible/windows/.*
	  arista/eos/docs/*
	  arista/eos/tests/*
	  arista/eos/.*
	  awx/awx/tests/*
	  azure/azcollection/tests/*
	  azure/azcollection/.*
	  check_point/mgmt/tests/*
	  chocolatey/chocolatey/tests/*
	  cisco/aci/tests/*
	  cisco/aci/.*
	  cisco/asa/docs/*
	  cisco/asa/tests/*
	  cisco/asa/.*
	  cisco/dnac/docs/*
	  cisco/dnac/tests/*
	  cisco/dnac/.*
	  cisco/intersight/.*
	  cisco/ios/docs/*
	  cisco/ios/tests/*
	  cisco/ios/.*
	  cisco/iosxr/docs/*
	  cisco/iosxr/tests/*
	  cisco/iosxr/.*
	  cisco/ise/docs/*
	  cisco/ise/tests/*
	  cisco/ise/.*
	  cisco/meraki/tests/*
	  cisco/meraki/.*
	  cisco/mso/tests/*
	  cisco/mso/.*
	  cisco/nso/tests/*
	  cisco/nso/.*
	  cisco/nxos/docs/*
	  cisco/nxos/tests/*
	  cisco/nxos/.*
	  cisco/ucs/.*
	  cloud/common/tests/*
	  cloudscale_ch/cloud/tests/*
	  cloudscale_ch/cloud/.*
	  community/aws/docs/*
	  community/aws/tests/*
	  community/aws/.*
	  community/azure/tests/*
	  community/azure/.*
	  community/ciscosmb/tests/*
	  community/ciscosmb/.*
	  community/crypto/docs/*
	  community/crypto/tests/*
	  community/crypto/.*
	  community/digitalocean/tests/*
	  community/digitalocean/.*
	  community/dns/docs/*
	  community/dns/tests/*
	  community/dns/.*
	  community/docker/docs/*
	  community/docker/tests/*
	  community/docker/.*
	  community/fortios/tests/*
	  community/fortios/.*
	  community/general/docs/*
	  community/general/tests/*
	  community/general/.*
	  community/google/tests/*
	  community/google/.*
	  community/grafana/tests/*
	  community/grafana/.*
	  community/hashi_vault/docs/*
	  community/hashi_vault/tests/*
	  community/hashi_vault/.*
	  community/hrobot/docs/*
	  community/hrobot/tests/*
	  community/hrobot/.*
	  community/libvirt/tests/*
	  community/libvirt/.*
	  community/mongodb/.*
	  community/mysql/tests/*
	  community/mysql/.*
	  community/network/tests/*
	  community/network/.*
	  community/okd/docs/*
	  community/okd/tests/*
	  community/okd/.*
	  community/postgresql/docs/*
	  community/postgresql/tests/*
	  community/postgresql/.*
	  community/proxysql/tests/*
	  community/proxysql/.*
	  community/rabbitmq/tests/*
	  community/rabbitmq/.*
	  community/routeros/docs/*
	  community/routeros/tests/*
	  community/routeros/.*
	  community/sap/tests/*
	  community/sap/.*
	  community/sap_libs/tests/*
	  community/sap_libs/.*
	  community/skydive/tests/*
	  community/skydive/.*
	  community/sops/docs/*
	  community/sops/tests/*
	  community/sops/.*
	  community/vmware/docs/*
	  community/vmware/tests/*
	  community/vmware/.*
	  community/windows/docs/*
	  community/windows/tests/*
	  community/windows/.*
	  community/zabbix/docs/*
	  community/zabbix/tests/*
	  community/zabbix/.*
	  containers/podman/docs/*
	  containers/podman/tests/*
	  cyberark/conjur/tests/*
	  cyberark/conjur/.*
	  cyberark/pas/docs/*
	  cyberark/pas/tests/*
	  cyberark/pas/.*
	  dellemc/enterprise_sonic/tests/*
	  dellemc/enterprise_sonic/.*
	  dellemc/openmanage/docs/*
	  dellemc/openmanage/tests/*
	  dellemc/openmanage/.*
	  dellemc/os10/docs/*
	  dellemc/os10/tests/*
	  dellemc/os10/.*
	  dellemc/os6/docs/*
	  dellemc/os6/tests/*
	  dellemc/os6/.*
	  dellemc/os9/docs/*
	  dellemc/os9/tests/*
	  dellemc/os9/.*
	  dellemc/powerflex/docs/*
	  dellemc/powerflex/tests/*
	  dellemc/powerflex/.*
	  dellemc/unity/docs/*
	  dellemc/unity/tests/*
	  dellemc/unity/.*
	  f5networks/f5_modules/docs/*
	  f5networks/f5_modules/tests/*
	  fortinet/fortimanager/tests/*
	  frr/frr/docs/*
	  frr/frr/tests/*
	  frr/frr/.*
	  gluster/gluster/tests/*
	  gluster/gluster/.*
	  google/cloud/tests/*
	  google/cloud/.*
	  grafana/grafana/tests/*
	  grafana/grafana/.*
	  hetzner/hcloud/tests/*
	  hetzner/hcloud/.*
	  hpe/nimble/tests/*
	  hpe/nimble/.*
	  ibm/qradar/docs/*
	  ibm/qradar/tests/*
	  ibm/qradar/.*
	  ibm/spectrum_virtualize/docs/*
	  ibm/spectrum_virtualize/tests/*
	  ibm/spectrum_virtualize/.*
	  infinidat/infinibox/docs/*
	  infinidat/infinibox/tests/*
	  infinidat/infinibox/.*
	  infoblox/nios_modules/tests/*
	  infoblox/nios_modules/.*
	  inspur/ispim/docs/*
	  inspur/ispim/.*
	  inspur/sm/docs/*
	  inspur/sm/.*
	  junipernetworks/junos/docs/*
	  junipernetworks/junos/tests/*
	  junipernetworks/junos/.*
	  kubernetes/core/docs/*
	  kubernetes/core/tests/*
	  kubernetes/core/.*
	  lowlydba/sqlserver/docs/*
	  lowlydba/sqlserver/tests/*
	  lowlydba/sqlserver/.*
	  mellanox/onyx/tests/*
	  mellanox/onyx/.*
	  microsoft/ad/docs/*
	  microsoft/ad/tests/*
	  microsoft/ad/.*
	  netapp/aws/tests/*
	  netapp/aws/.*
	  netapp/azure/tests/*
	  netapp/azure/.*
	  netapp/cloudmanager/tests/*
	  netapp/cloudmanager/.*
	  netapp/elementsw/tests/*
	  netapp/elementsw/.*
	  netapp/ontap/tests/*
	  netapp/ontap/.*
	  netapp/storagegrid/tests/*
	  netapp/storagegrid/.*
	  netapp/um_info/tests/*
	  netapp/um_info/.*
	  netapp_eseries/santricity/tests/*
	  netapp_eseries/santricity/.*
	  netbox/netbox/docs/*
	  netbox/netbox/tests/*
	  netbox/netbox/.*
	  ngine_io/cloudstack/tests/*
	  ngine_io/cloudstack/.*
	  ngine_io/exoscale/tests/*
	  ngine_io/exoscale/.*
	  ngine_io/vultr/tests/*
	  ngine_io/vultr/.*
	  openstack/cloud/docs/*
	  openvswitch/openvswitch/docs/*
	  openvswitch/openvswitch/tests/*
	  openvswitch/openvswitch/.*
	  ovirt/ovirt/tests/*
	  ovirt/ovirt/.*
	  purestorage/flasharray/docs/*
	  purestorage/flasharray/tests/*
	  purestorage/flasharray/.*
	  purestorage/flashblade/tests/*
	  purestorage/flashblade/.*
	  purestorage/fusion/tests/*
	  purestorage/fusion/.*
	  sensu/sensu_go/docs/*
	  sensu/sensu_go/tests/*
	  sensu/sensu_go/.*
	  splunk/es/docs/*
	  splunk/es/tests/*
	  splunk/es/.*
	  t_systems_mms/icinga_director/docs/*
	  t_systems_mms/icinga_director/.*
	  vmware/vmware_rest/docs/*
	  vmware/vmware_rest/tests/*
	  vmware/vmware_rest/.*
	  vultr/cloud/tests/*
	  vultr/cloud/.*
	  vyos/vyos/docs/*
	  vyos/vyos/tests/*
	  vyos/vyos/.*
	  wti/remote/docs/*

